# RP2040_ILI9341_XPT2046

./: CMakeLists.txt  README.md  ili9341.c  ili9341.h  ili9341_draw.c  ili9341_draw.h  ili9341_framebuffer.c  ili9341_framebuffer.h  main.c  ugui.h  xpt2046.c  xpt2046.h
